--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 # Change to your own name
-site_name: My Research Page
+site_name: Jared Splinter
 # Change to your own site
-site_url: https://steob92.github.io/mcgill-tutorial/ # must have the trailing slash
-site_author: Your Name (stephan.obrien@mcgill.ca)
-site_description: Research site for Your Name 
+site_url: https://jaredsplinter.github.io/ # must have the trailing slash
+site_author: Jared Splinter (jared.splinter@mail.mcgill.ca)
+site_description: Research site for Jared
 copyright: > # should remain a link to the original theme
-  &copy; 2023 Your Name <br>
+  &copy; 2023 Jared Splinter <br>
   <a href="https://github.com/vuquangtrong/mkdocs-material-blog">Blog Theme</a> /
   <a href="https://squidfunk.github.io/mkdocs-material/">Material for MkDocs</a>
 
